--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "date-fns": "^4.1.0",
-    "email-validator": "^2.0.4"
+    "email-validator": "^2.0.4",
+    "uuid": "^11.0.3"
   }
 }
